--- a/playbooks/roles/nexus/vars/main.yml
+++ b/playbooks/roles/nexus/vars/main.yml
@@ -3,6 +3,7 @@ nexus: {
   version: '2.11.1-01',
   port:    8080,
   run:     standalone, # standalone, war
+  timeout: 60,         # in seconds
   standalone: {
     url:     '{{ common.repo.sonatype }}/nexus/oss/nexus-<version>-bundle.tar.gz',
     archive: '/opt/nexus-<version>.tar.gz',
