--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -2,17 +2,19 @@
 artifactory: {
   version: latest, # 3.4.2, latest - https://dl.bintray.com/jfrog/artifactory/
   port:    8080,
+  run:     standalone, # standalone, war
+  timeout: 60,         # in seconds
   latest: {
     command: "curl -s '{{ common.repo.bintray }}/jfrog/artifactory/' | grep '<pre>' | grep 'artifactory-' | sed -r 's/<[^>]+>//g' | sed 's/artifactory-//' | sed 's/\\.zip$//' | tail -1",
     pattern: '^\d+\.\d+\.\d+$'
   },
-  url: {
-    war:        '{{ common.repo.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
-    standalone: '{{ common.repo.bintray }}/jfrog/artifactory/artifactory-<version>.zip',
+  standalone: {
+    url:     '{{ common.repo.bintray }}/jfrog/artifactory/artifactory-<version>.zip',
+    archive: /opt/artifactory-<version>.zip,
+    home:    /opt/artifactory
   },
-  archive: {
-    war:        /opt/artifactory-<version>.war,
-    standalone: /opt/artifactory-<version>.zip
-  },
-  home:    /opt/artifactory
+  war: {
+    url:     '{{ common.repo.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
+    archive: /opt/artifactory-<version>.war
+  }
 }
