--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -27,6 +27,7 @@ common: {
     download: "{{ playbook_dir }}/utils/download.yml",
     mkdir:    "{{ playbook_dir }}/utils/mkdir.yml",
     service:  "{{ playbook_dir }}/utils/service.yml",
+    tomcat:   "{{ playbook_dir }}/roles/tomcat/tasks/main.yml"
   },
 
   # Whether roles should start services installed
