--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -16,5 +16,11 @@ artifactory: {
   war: {
     url:     '{{ common.repo.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
     archive: /opt/artifactory-<version>.war
-  }
+  },
+  verify:
+    "{ path: /artifactory/api/system/ping }",
+    "{ path: /artifactory/api/application.wadl }",
+    "{ path: '/artifactory/api/search/artifact?name=name' }",
+    "{ path: /artifactory/webapp/home.html }",
+    "{ path: /artifactory/webapp/browserepo.html }"
 }
