--- a/playbooks/roles/artifactory/tasks/main.yml
+++ b/playbooks/roles/artifactory/tasks/main.yml
@@ -29,11 +29,11 @@
       - { content: '0;URL=/artifactory' }
       - { path:    '/artifactory/api/system/ping', content: 'OK' }
     verify:
-      - { path: /artifactory/api/system/ping }
-      - { path: /artifactory/api/application.wadl }
-      - { path: '/artifactory/api/search/artifact?name=name' }
-      - { path: /artifactory/webapp/home.html }
-      - { path: /artifactory/webapp/browserepo.html }
+      - { path: '/artifactory/api/system/ping',               content: 'OK' }
+      - { path: '/artifactory/api/application.wadl',          content: '</application>' }
+      - { path: '/artifactory/api/search/artifact?name=name', content: '"results"' }
+      - { path: '/artifactory/webapp/home.html',              content: "Artifactory {{ artifactory_version }}" }
+      - { path: '/artifactory/webapp/browserepo.html',        content: "Artifactory {{ artifactory_version }}" }
   when: artifactory.run == 'standalone'
 
   # -----------------------
