--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -15,12 +15,16 @@ artifactory: {
   },
   war: {
     url:     '{{ common.repo.jfrog }}/artifactory/libs-releases/org/artifactory/artifactory-web-war/<version>/artifactory-web-war-<version>.war',
-    archive: /opt/artifactory-<version>.war
+    archive: /opt/artifactory-<version>.war,
+    home:    artifactory
   },
-  verify:
-    "{ path: /artifactory/api/system/ping }",
-    "{ path: /artifactory/api/application.wadl }",
-    "{ path: '/artifactory/api/search/artifact?name=name' }",
-    "{ path: /artifactory/webapp/home.html }",
-    "{ path: /artifactory/webapp/browserepo.html }"
+  wait: [
+    { path: /artifactory/api/system/ping, content: OK }
+  ],
+  verify: [
+    { path: /artifactory/api/application.wadl,         content: </application> },
+    { path: '/artifactory/api/search/artifact?name=x', content: results },
+    { path: /artifactory/webapp/home.html,             content: Artifactory },
+    { path: /artifactory/webapp/browserepo.html,       content: Artifactory }
+  ]
 }
