--- a/playbooks/roles/skydns/tasks/etcd.yml
+++ b/playbooks/roles/skydns/tasks/etcd.yml
@@ -1,22 +1,23 @@
 ---
 - set_fact:
-    etcd_dir: "{{ etcd.dir_name | tokens( etcd ) }}"
+    etcd_dir:  "{{ etcd.dir_name | tokens( etcd ) }}"
 - set_fact:
-    etcd_bin: "{{ etcd.home }}/{{ etcd_dir }}/etcd"
+    etcd_bin:  "{{ etcd.home }}/{{ etcd_dir }}/etcd"
+    etcd_port: "{{ etcd_port | default( etcd.port ) }}"
 
 - include: "{{ common.utils.service }}"
   vars:
-    service:     etcd
-    title:       etcd
-    url:         "{{ etcd.url     | tokens({ 'dir_name': etcd_dir, 'version': etcd.version }) }}"
-    archive:     "{{ etcd.archive | tokens( etcd ) }}"
-    home:        "{{ etcd.home }}"
+    service: etcd
+    title:   etcd
+    url:     "{{ etcd.url     | tokens({ 'dir_name': etcd_dir, 'version': etcd.version }) }}"
+    archive: "{{ etcd.archive | tokens( etcd ) }}"
+    home:    "{{ etcd.home }}"
     configs:
       - { role: skydns, from: etcd-config, to: "{{ etcd.config }}" }
     env_config:  "{{ etcd.config }}"
-    tests:        
+    tests:
       - { run: "{{ etcd_bin }} --version", expect: "{{ etcd.version }}" }
-    command:     "{{ etcd_bin }} $ETCD_OPTS"
-    port:        "{{ etcd_port | default( etcd.port ) }}"
-    path:        '/version'
-    content:     "{{ etcd.version }}"
+    command: "{{ etcd_bin }} $ETCD_OPTS"
+    port:    "{{ etcd_port }}"
+    verify:
+      - { path: '/version', content: "{{ etcd.version }}" }
