--- a/playbooks/roles/zookeeper/tasks/exhibitor.yml
+++ b/playbooks/roles/zookeeper/tasks/exhibitor.yml
@@ -8,27 +8,27 @@
 
 - stat: path={{ exhibitor_jar }}
   register: exhibitor_jar_stat
+- set_fact: exhibitor_jar_missing="{{ not exhibitor_jar_stat.stat.exists | bool }}"
 
-- set_fact:
-    exhibitor_jar_available: exhibitor_jar_stat.stat.exists | bool
+- debug: var=exhibitor_jar_missing
 
 - name: Cloning Gradle provider
   git:
     repo: "{{ exhibitor.gradle_provider }}"
     dest: "{{ exhibitor.home }}"
-  when: not exhibitor_jar_available
+  when: exhibitor_jar_missing
 
 - name: Writing Exhibitor build file
   template:
     src:  exhibitor-build.gradle
     dest: "{{ exhibitor.home }}/build.gradle"
-  when: not exhibitor_jar_available
+  when: exhibitor_jar_missing
 
 - name: Building Exhibitor standalone
   command: ./gradlew clean jar
   args:
     chdir: "{{ exhibitor.home }}"
-  when: not exhibitor_jar_available
+  when: exhibitor_jar_missing
 
 - name:     Running Exhibitor standalone help
   command:  java -jar '{{ exhibitor_jar }}' --help
