--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -9,35 +9,45 @@
 # - Generates {{ configs }}
 # - Runs {{ cleanup }} commands
 # ===================================================================================================
-# - Required variables are: url, archive. Others are optional.
+# - Required variables: none. All are optional.
 # ===================================================================================================
+- set_fact:
+    download:   "{{ (( url is defined ) and ( archive is defined )) | bool }}"
+    unpack:     "{{ (( url is defined ) and ( archive is defined ) and ( home is defined )) | bool }}"
+- set_fact:
+    clean_home: "{{ ( unpack | bool and ( clean | default(True))) | bool }}"
+
+- debug: var=download
+- debug: var=unpack
+- debug: var=clean_home
 
 - debug: msg="Downloading '{{ url }}' => '{{ archive }}'"
-  when:  home is not defined
+  when:  download and ( not unpack )
 
 - debug: msg="Downloading '{{ url }}' => '{{ archive }}' => '{{ home }}'"
-  when:  home is defined
+  when:  unpack
 
 - name: Downloading {{ title }}
   get_url:
     url:  "{{ url }}"
     dest: "{{ archive }}"
+  when: download
 
 - debug: msg="Deleting '{{ home }}'!"
-  when: home is defined and ( clean | default(True))
+  when:  clean_home
 
 - file: path={{ home }} state=absent
-  when: home is defined and ( clean | default(True))
+  when: clean_home
 
 - file: path={{ home }} state=directory
-  when: home is defined
+  when: clean_home
 
 - name: Unpacking {{ title }}
   unarchive:
     src:  "{{ archive }}"
     dest: "{{ home }}"
     copy: false
-  when: home is defined
+  when: unpack
 
 - name:        Running {{ title }} tests
   command:     "{{ item.run }}"
